--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,19 @@
 {
 "name": "buse974/address",
 "description": "Module Address for ZF2",
-"type": "Module ZF2",
-"homepage": "https://github.com/buse974/Address"
+"type": "library",
+"homepage": "https://github.com/buse974/Address",
+"license": "MIT",
+"authors": [
+{
+"name": "Christophe Robert",
+"email": "christophe.robert@ti1.fr"
+}
+],
+"require": {
+"php": ">=5.4"
+},
+"require-dev" : {
+"phpunit/phpunit" : ">=3.7,<4"
+}
 }
