--- a/composer.json
+++ b/composer.json
@@ -1,19 +1,20 @@
 {
-"name": "buse974/address",
-"description": "Module Address for ZF2",
-"type": "library",
-"homepage": "https://github.com/buse974/Address",
-"license": "MIT",
-"authors": [
-{
-"name": "Christophe Robert",
-"email": "christophe.robert@ti1.fr"
-}
-],
-"require": {
-"php": ">=5.4"
-},
-"require-dev" : {
-"phpunit/phpunit" : ">=3.7,<4"
-}
+	"name": "buse974/address",
+	"description": "Module Address for ZF2",
+	"type": "library",
+	"homepage": "https://github.com/buse974/Address",
+	"license": "MIT",
+	"authors": [
+	{
+		"name": "Christophe Robert",
+		"email": "christophe.robert@ti1.fr"
+	}
+	],
+	"require": {
+		"php": ">=5.4",
+    	"buse974/dal":"dev-master"
+	},
+	"require-dev" : {
+		"phpunit/phpunit" : ">=3.7,<4"
+	}
 }
