--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
 	"php": ">=5.4",
-    	"buse974/dal":"v1.0-beta-3",
+    	"buse974/dal":"dev-master",
         "zendframework/zendframework": "2.*"
     },
     "require-dev" : {
