--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
         }
     ],
     "require": {
-	"php": ">=5.4",
+	"php": ">=5.6",
     	"buse974/dal":"dev-master",
-        "zendframework/zendframework": "~2.0||~3.0"
+        "zendframework/zendframework": "~3.0"
     },
     "require-dev" : {
         "satooshi/php-coveralls": "1.0.0",
