--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
 	"php": ">=5.4",
-    	"buse974/dal":"1.0-beta-4",
+    	"buse974/dal":"dev-v1-zf2",
         "zendframework/zendframework": "~2.0"
     },
     "require-dev" : {
