--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "require-dev" : {
         "satooshi/php-coveralls": "1.0.0",
-	"fabpot/php-cs-fixer":"*",
+	"friendsofphp/php-cs-fixer" : "*",
         "phpunit/phpunit" : ">=4"
     },
     "autoload": {
