--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
 	"php": ">=5.6",
-    	"buse974/dal":"dev-expressive",
+    	"buse974/dal":"dev-expressive"
     },
     "require-dev" : {
         "satooshi/php-coveralls": "1.0.0",
